; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-varlink.c_overload_reply.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-varlink.c_overload_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"Over reply triggered with error: %s\00", align 1
@VARLINK_ERROR_DISCONNECTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*, i32, i8*)* @overload_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @overload_reply(i32* %0, i32* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = call i32 @strna(i8* %11)
  %13 = call i32 @log_debug(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* @VARLINK_ERROR_DISCONNECTED, align 4
  %16 = call i32 @streq(i8* %14, i32 %15)
  %17 = call i32 @assert_se(i32 %16)
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @varlink_get_event(i32* %18)
  %20 = call i32 @sd_event_exit(i32 %19, i32 0)
  ret i32 0
}

declare dso_local i32 @log_debug(i8*, i32) #1

declare dso_local i32 @strna(i8*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @streq(i8*, i32) #1

declare dso_local i32 @sd_event_exit(i32, i32) #1

declare dso_local i32 @varlink_get_event(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
